--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,15 +1,21 @@
-.profile__subtitle {
+.profile__job {
+  grid-area: job;
   font-size: 18px;
   line-height: 22px;
   font-weight: normal;
-
   margin: 0;
 }
 
+@media screen and (max-width: 930px) {
+  .profile__job {
+    font-size: 16px;
+    justify-self: center;
+  }
+}
+
 @media screen and (max-width: 525px) {
-  .profile__subtitle {
+  .profile__job {
     font-size: 14px;
     line-height: 17px;
-    align-self: center;
   }
 }
