--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,8 @@
 .place__title {
   margin: 0;
-
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
