--- a/blocks/popup/__container-input/popup__container-input.css
+++ b/blocks/popup/__container-input/popup__container-input.css
@@ -20,3 +20,13 @@
 .popup__container-input:focus {
   outline: none;
 }
+
+@media screen and (max-width: 600px) {
+  .popup__container-input {
+    width: 250px;
+    height: 27px;
+    margin: 20px auto;
+    font-size: 12px;
+    line-height: 14px;
+  }
+}
