--- a/blocks/popup/__container-title/popup__container-title.css
+++ b/blocks/popup/__container-title/popup__container-title.css
@@ -8,3 +8,13 @@
 
   color: #000000;
  }
+
+ @media screen and (max-width: 600px) {
+  .popup__container-title {
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 24px;
+    margin-left: 10px;
+    margin-bottom: 24px;
+  }
+}
