--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -11,3 +11,12 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
 }
+
+@media screen and (max-width: 600px) {
+  .popup__container {
+    width: 282px;
+    height: 246px;
+    left: calc(50vw - 141px);
+    top: calc(50vh - 108px);
+  }
+}
