--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -2,7 +2,6 @@
   width: 150px;
   height: 50px;
 
-
   background-image: url(./../../../images/add-btn.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -14,16 +13,20 @@
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 2px;
+  transition: opacity 0.5s ease-out;
 }
 
-@media screen and (max-width: 698px) {
+@media screen and (max-width: 930px) {
   .profile__add-btn {
     margin-top: 36px;
+    width: 282px;
   }
 }
 
-@media screen and (max-width: 620px) {
-  .profile__add-btn {
-    width: 282px;
-  }
+.profile__add-btn:focus {
+  outline: none;
+}
+
+.profile__add-btn:hover {
+  opacity: 0.6;
 }
