--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,8 +3,9 @@
   flex-flow: row wrap;
 }
 
-@media screen and (max-width: 525px) {
+@media screen and (max-width: 930px) {
   .profile__info {
+    margin-top: 10px;
     flex-direction: column;
     align-items: center;
   }
