--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,11 +1,10 @@
 @import url(./__avatar/profile__avatar.css);
 @import url(./__add-btn/profile__add-btn.css);
 @import url(./__info/profile__info.css);
-@import url(./__title/profile__title.css);
-@import url(./__subtitle/profile__subtitle.css);
+@import url(./__name/profile__name.css);
+@import url(./__job/profile__job.css);
 @import url(./__edit-btn/profile__edit-btn.css);
 @import url(./__description/profile__description.css);
-@import url(./__edit-form/profile__edit-form.css);
 
 .profile {
   width: 87%;
@@ -19,8 +18,9 @@
 
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 930px) {
   .profile {
     justify-content: center;
+    flex-flow: column;
   }
 }
