--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,6 +2,7 @@
 @import url(./__description/place__description.css);
 @import url(./__like-btn/place__like-btn.css);
 @import url(./__title/place__title.css);
+@import url(./__like-btn/_cheked/place__like-btn_cheked.css);
 
 .place {
   width: 282px;
