--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -8,6 +8,8 @@
   grid-template-columns: repeat(3, 282px);
   grid-auto-rows: auto;
   grid-gap: 18px;
+
+  padding: 0;
 }
 
 @media screen and (max-width: 930px) {
