--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,9 @@
 @import url(./__container/popup__container.css);
-@import url(./__close-btn/popup__close-btn.CSS);
+@import url(./__close-btn/popup__close-btn.css);
 @import url(./__container-title/popup__container-title.css);
 @import url(./__container-input/popup__container-input.css);
 @import url(./__container-save-btn/popup__container-save-btn.css);
-@import url(./popup_opened.css);
+@import url(./_opened/popup_opened.css);
 
 .popup {
   display: none;
