--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,6 +3,7 @@
 @import url(./__like-btn/place__like-btn.css);
 @import url(./__title/place__title.css);
 @import url(./__like-btn/_cheked/place__like-btn_cheked.css);
+@import url(./__delete-btn/place__delete-btn.css);
 
 .place {
   width: 282px;
@@ -10,4 +11,6 @@
 
   background-color: #FFFFFF;
   border-radius: 10px;
+
+  position: relative;
 }
