--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -14,4 +14,11 @@
   top: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+}
+
+.popup:hover {
+  opacity: 1;
 }
