--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,4 @@
 @import url(./../blocks/footer/footer.css);
 @import url(./../blocks/page/page.css);
 @import url(./../blocks/popup/popup.css);
+@import url(./../blocks/img-popup/img-popup.css);
