--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -16,9 +16,6 @@
   z-index: 1;
 
   opacity: 0;
-  transition: opacity 0.3s ease-out;
-}
-
-.popup:hover {
-  opacity: 1;
+  visibility: hidden;
+  transition: visibility 0.7s linear, opacity 0.7s linear;
 }
