--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import url(./../blocks/page/page.css);
 @import url(./../blocks/popup/popup.css);
 @import url(./../blocks/img-popup/img-popup.css);
+@import url(./../blocks/body/body.css);
