feature/validation (mesto/3)

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,6 +4,8 @@
 @import url(./__container-input/popup__container-input.css);
 @import url(./__container-save-btn/popup__container-save-btn.css);
 @import url(./_opened/popup_opened.css);
+@import url(./__error/popup__error.css);
+@import url(./__control/popup__control.css);
 
 .popup {
   display: none;
