--- a/blocks/popup/__container-input/popup__container-input.css
+++ b/blocks/popup/__container-input/popup__container-input.css
@@ -1,7 +1,8 @@
+@import url(./_error/popup__container-input_error.css);
+
 .popup__container-input {
   width: 358px;
   height: 27px;
-  margin: 30px auto;
 
   display: flex;
 
@@ -25,7 +26,6 @@
   .popup__container-input {
     width: 220px;
     height: 27px;
-    margin: 20px auto;
     font-size: 12px;
     line-height: 14px;
   }
