--- a/blocks/popup/__container-save-btn/popup__container-save-btn.css
+++ b/blocks/popup/__container-save-btn/popup__container-save-btn.css
@@ -1,8 +1,10 @@
+@import url(./_inactive/popup__container-save-btn_inactive.css);
+
 .popup__container-save-btn {
   display: block;
   width: 358px;
   height: 50px;
-  margin: 48px auto 0;
+  margin: 31px auto 0;
 
   color: #FFFFFF;
 
@@ -10,6 +12,8 @@
   border-radius: 2px;
   border: 0;
   transition: opacity 0.5s ease-out;
+
+  cursor: pointer;
 }
 
 .popup__container-save-btn:focus {
@@ -24,6 +28,6 @@
   .popup__container-save-btn {
     width: 220px;
     height: 40px;
-    margin: 35px auto 0;
+    margin: 20px auto 0;
   }
 }
