--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,4 +1,6 @@
 @import url(./__avatar/profile__avatar.css);
+@import url(./__avatar-edit/profile__avatar-edit.css);
+@import url(./__avatar-img/profile__avatar-img.css);
 @import url(./__add-btn/profile__add-btn.css);
 @import url(./__info/profile__info.css);
 @import url(./__name/profile__name.css);
