--- a/src/blocks/img-popup/img-popup.css
+++ b/src/blocks/img-popup/img-popup.css
@@ -5,7 +5,7 @@
 @import url(./_opened/img-popup_opened.css);
 
 .img-popup {
-  display: none;
+  display: flex;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -16,5 +16,5 @@
   
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.7s linear, opacity 0.3s linear;
+  transition: visibility 0.2s linear, opacity 0.2s linear;
 }
