--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -12,7 +12,7 @@
 
 
 .popup {
-  display: none;
+  display: block;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -23,5 +23,5 @@
 
   opacity: 0;
   visibility: hidden;
-  transition: visibility 0.7s linear, opacity 0.7s linear;
+  transition: visibility 0.2s linear, opacity 0.2s linear;
 }
