--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,4 @@
-@import url(./../styles/normalize.css);
+@import url(./../vendor/normalize.css);
 @import url(./../fonts/font.css);
 @import url(./../blocks/header/header.css);
 @import url(./../blocks/profile/profile.css);
